Fix #91 by using `[-]` and `[+]` to indicate expanded and collapsed sections.

--- a/src/main/webapp/res/css/style.css
+++ b/src/main/webapp/res/css/style.css
@@ -497,11 +497,11 @@ li.entityviz-PRIVATE
 
 .filesTable-header-shown:before
 {
-    content: "\002a53  ";
+    content: "[-]  ";
 }
 .filesTable-header-hidden:before
 {
-    content: "\002a54  ";
+    content: "[+]  ";
 }
 .filesTable-plots
 {
